fix: small bug fixes